@@ -15,6 +15,8 @@ they are compatible in modern releases.
 ** SCRAM: Encode and decode username/authzid properly.
 Before any username/authzid that contained '=' or ',' would not work.
 
+** SCRAM: Don't read out of bounds when parsing tokens.
+
 ** DIGEST-MD5: The server code now returns GSASL_OK after the final token.
 
 ** API and ABI modifications.
